test/classes/jplevyak/record_type_hierarchy-3-error.good
_chpl_adomain.chpl:22: fwrite, f : file, val : _array
_chpl_adomain.chpl:272: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:279: fwrite, f : file, x : _aarray
_chpl_adomain.chpl:5: fwrite, f : file, val : _domain
_chpl_base.chpl:11: fwrite, f : file, val : _setterTokenType
_chpl_base.chpl:3: fwrite, f : file, val : _unused_class
_chpl_base.chpl:83: fwrite, f : file, val : _ddata
_chpl_base.chpl:9: fwrite, f : file, val : _methodTokenType
_chpl_closure.chpl:1: fwrite, f : file, val : closure
_chpl_complex.chpl:8: fwrite, f : file, x : complex
_chpl_file.chpl:187: fwrite, f : file, val : int64
_chpl_file.chpl:220: fwrite, f : file, val : float64
_chpl_file.chpl:240: fwrite, f : file, val : string
_chpl_file.chpl:271: fwrite, f : file, val : bool
_chpl_file.chpl:289: fwrite, f : file, x : nil_type
_chpl_file.chpl:76: fwrite, f : file, val : file
_chpl_htuple.chpl:18: fwrite, f : file, x : _tuple
_chpl_htuple.chpl:45: fwrite, f : file, x : _htuple
_chpl_indefinite.chpl:132: fwrite, f : file, x : _idomain
_chpl_indefinite.chpl:139: fwrite, f : file, x : _iarray
_chpl_seq.chpl:150: fwrite, f : file, s : seq
_chpl_seq.chpl:199: fwrite, f : file, s : _aseq
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:236: fwrite, f : file, val : reduction
_chpl_seq.chpl:244: fwrite, f : file, val : sum
_chpl_seq.chpl:259: fwrite, f : file, val : max
_chpl_sparse.chpl:16: fwrite, f : file, x : _sarray
_chpl_sparse.chpl:1: fwrite, f : file, val : _sdomain
error: '_tmp' has no type
fail: program does not type
note: candidates are:
note: candidates are:
prelude.chpl:10: fwrite, f : file, val : CFILEPTR
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
record_type_hierarchy-3-error.chpl:10: f, a : D
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: illegal call argument type '_tmp' illegal: ( ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'b' illegal: ( C ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'stdout' illegal: ( file ) 
record_type_hierarchy-3-error.chpl:16: unresolved call 'f'
record_type_hierarchy-3-error.chpl:16: unresolved call 'fwrite'
record_type_hierarchy-3-error.chpl:1: fwrite, f : file, val : C
record_type_hierarchy-3-error.chpl:5: fwrite, f : file, val : D
